--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 :root {
     font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --android-green-bgc: #32de84;
+    --bright-blue-bgc: #5fa9e6;
+    --bright-orange-bgc: #FF6347;
+
+    --top-margin: 12.5px;
+    --right-margin: 10px;
 }
 
 body {
     display: grid;
-    grid-template-columns: minmax(250px, 1fr) 4fr;
-    grid-template-rows: 1.5fr 5fr 0.55fr;
-    gap: 15px;
+    grid-template-columns: minmax(250px, 1fr) 3fr 1.5fr;
+    grid-template-rows: 1.35fr 0.15fr 6fr 0.5fr;
+    gap: 12.5px;
 
     margin: 0;
     padding: 0;
@@ -19,7 +24,7 @@ a {
 
 .sidebar {
     grid-column: 1 / span 1;
-    grid-row: 1 / span 3;
+    grid-row: 1 / span 4;
     background-color: var(--android-green-bgc);
     display: flex;
     flex-direction: column;
@@ -29,7 +34,7 @@ a {
 .sidebar .logo-and-header {
     margin: 25px 25px 0px 25px;
     display: flex;
-    color: white;
+    color: whitesmoke;
     gap: 15px;
     align-items: center;
 }
@@ -79,7 +84,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 3.5px;
-    color: white;
+    color: whitesmoke;
 }
 
 .sidebar .nav-logos div {
@@ -94,16 +99,63 @@ a {
 }
 
 .sidebar .nav-logos a {
-    color: white;
+    color: whitesmoke;
     font-size: 1.35rem;
     font-weight: 550;
 }
 
-.footer {
-    grid-column: 1 / span 2;
+.top-intro {
+    background-color: var(--bright-orange-bgc);
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1;
+    padding: 1px 15px 10.25px 12.5px;
+    color: whitesmoke;
+    margin-top: var(--top-margin);
+}
+
+.top-intro h1 {
+    font-size: 60px;
+    padding: 0;
+    margin: 5px 0px 7.5px 15px;
+}
+
+.top-intro h3 {
+    font-weight: 300;
+    font-size: 16px;
+    padding: 0;
+    margin: 0px 0px 2.5px 20px;
+}
+
+.top-intro h5 {
+    font-weight: 600;
+    font-size: 16px;
+    padding: 0;
+    margin: 10px 0px 5px 20px;
+}
+
+.top-side-content {
+    grid-row: 1 / span 2;
+    margin-top: var(--top-margin);
+    margin-right: var(--right-margin);
+    background: linear-gradient(330deg, #48A9FE, #0BEEF9);
+}
+
+.bottom-side-content {
     grid-row: 3 / span 1;
-    background-color: #5fa9e6;
-    color: white;
+    grid-column: 3 / span 1;
+    margin-right: var(--right-margin);
+    background: linear-gradient(145deg, #A594F9, #7556c9);
+}
+
+.main-content {
+    grid-row: 2 / span 2;
+}
+
+.footer {
+    grid-column: 1 / span 3;
+    grid-row: 4 / span 2;
+    background-color: var(--bright-blue-bgc);
+    color: whitesmoke;
     font-size: 13.5px;
     display: flex;
     justify-content: center;
