--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
     --android-green-bgc: #32de84;
     --bright-blue-bgc: #5fa9e6;
     --bright-orange-bgc: #FF6347;
+    --grey-bgc: #322e2e;
+    --charcoal-bgc: rgb(51, 51, 51);
 
     --top-margin: 12.5px;
     --right-margin: 10px;
@@ -39,6 +41,12 @@ a {
     color: whitesmoke;
     gap: 15px;
     align-items: center;
+    cursor: pointer;
+    transition: all 0.15s ease-out;
+}
+
+.sidebar .logo-and-header:hover {
+    transform: scale(95%);
 }
 
 .sidebar .logo-and-header span {
@@ -93,6 +101,12 @@ a {
     display: grid;
     grid-template-columns: 1.15fr 3fr;
     grid-template-rows: repeat(4, 10px);
+    cursor: pointer;
+    transition: all 0.05s ease-in-out;
+}
+
+.sidebar .nav-logos div:hover {
+    transform: scale(105%);
 }
 
 .sidebar .nav-logos i {
@@ -118,14 +132,14 @@ a {
 }
 
 .top-intro h1 {
-    font-size: 60px;
+    font-size: 3.5rem;
     padding: 0;
     margin: 5px 0px 7.5px 15px;
 }
 
 .top-intro h5 {
     font-weight: 600;
-    font-size: 16px;
+    font-size: 1rem;
     padding: 0;
     margin: 10px 0px 5px 20px;
 }
@@ -154,10 +168,11 @@ a {
     align-items: center;
     justify-items: center;
     box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+    padding-top: 10px;
 }
 
 .card {
-    width: 225px;
+    width: 250px;
     height: 275px;
     border-radius: 5%;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -185,6 +200,34 @@ a {
     transition: all 0.15s ease-out;
 }
 
+.card .info .name-and-description {
+    max-width: 100%;
+    max-height: 70%;
+    display: grid;
+    margin: 20px 15px 10px 15px;
+    color: rgb(86, 84, 84);
+}
+
+.card .info #name {
+    font-size: 1.25rem;
+}
+
+.card .info #description {
+    font-size: 0.85rem;
+}
+
+.card .info .buttons {
+    font-size: 1.25rem;
+    position: absolute;
+    bottom: 10px;
+    left: 217.5px;
+    transition: all 0.15s linear;
+}
+
+.card .info .buttons:hover {
+    transform: scale(80%);
+}
+
 .card:hover .info {
     height: 75%;
 }
@@ -205,6 +248,13 @@ a {
 
 .card.four-landing-page {
     background-image: url(img/odin-landing-page.png);
+}
+
+.card a {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .footer {
