--- a/styles.css
+++ b/styles.css
@@ -217,11 +217,12 @@ a {
 }
 
 .card .info .buttons {
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     position: absolute;
     bottom: 10px;
     left: 217.5px;
     transition: all 0.15s linear;
+    z-index: 1;
 }
 
 .card .info .buttons:hover {
