Add Text to the Top-Right Unit

--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,20 @@ a {
     margin-right: var(--right-margin);
     background: linear-gradient(330deg, #48A9FE, #0BEEF9);
     border-radius: var(--colored-block-border-radius);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 1.15s ease-in;
+}
+
+.top-side-content span {
+    color: whitesmoke;
+    font-size: 1.75rem;
+    font-weight: bold;
+}
+
+.top-side-content span:hover {
+    transform: scale(95%);
 }
 
 .bottom-side-content {
